--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.3.5",
     "typescript": "4.6.3",
-    "usehooks-ts" : "2.1.1"
+    "usehooks-ts" : "2.1.1",
+    "react-reveal" : "1.2.2",
+    "@types/react-router-dom" : "5.3.3",
+    "@types/react-lottie" : "1.2.6"
   },
   "scripts": {
     "start": "react-app-rewired start",
